style.css
:root {
  --nu-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
  --nu-shadow-soft: 6px 6px 12px #b8b9be, -6px -6px 12px #fff;
  --nu-shadow-inset: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
  --nu-border: 1px solid #d1d9e6;

  --scroller-height: 475px;
  --post-width: 540px; /* A Tumblr thing */
  --post-padding: 16px; /* can be customized */
  --post-padding-color: white;
}

/* Layout/General styles */
body {
  min-height: 100vh;
  margin: 0;
  padding: 2rem;
  line-height: 1.5;
  display: grid;
  grid-template-rows: auto 1fr auto;
  gap: 1.5rem;
  color: #44476a;
  background-color: #e6e7ee;

  --bg-size: 2.25;
  --bg-rotation: 0.125;
  --symbol-color: rgb(0, 0, 0, 0.06);
  background-image: linear-gradient(-2.5deg, #e6e6e6, transparent 30%, transparent 70%, #e6e7ee),
    repeating-linear-gradient(
      calc(var(--bg-rotation) * 0.25turn),
      transparent,
      transparent calc(var(--bg-size) * 8px),
      var(--symbol-color),
      var(--symbol-color),
      transparent calc(var(--bg-size) * 9px),
      transparent calc(var(--bg-size) * 16px)
    ),
    repeating-linear-gradient(
      calc(var(--bg-rotation) * 0.25turn + 0.25turn),
      transparent,
      transparent calc(var(--bg-size) * 8px),
      var(--symbol-color),
      var(--symbol-color),
      transparent calc(var(--bg-size) * 9px),
      transparent calc(var(--bg-size) * 16px)
    );
  background-attachment: fixed;
  background-size: 100%;
}

header {
  h1 {
    font-weight: 700;
    font-size: 2rem;
  }
}

main {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-auto-rows: max-content;
  gap: 2rem;
}

footer {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;

  a {
    text-decoration-color: #b8b9be;
    text-underline-offset: 2px;

    &:hover {
      text-decoration-color: unset;
    }
  }
}

/* Specific Styles */
.controls {
  fieldset {
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }

  button {
    width: 100%;
    padding: 0.75rem 0.8rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0.55rem;
    font-weight: 700;
    box-shadow: var(--nu-shadow);

    &:active {
      box-shadow: var(--nu-shadow-inset);
    }

    &:disabled {
      opacity: 0.65;
      box-shadow: var(--nu-shadow-inset);
      color: #31344b;
      background-color: #e6e7ee;
      border-color: #e6e7ee;
    }
  }
}

#post-wrapper {
  height: auto;
  width: calc(var(--post-width) + 2 * var(--post-padding));
  padding: var(--post-padding);
  margin-inline: auto;
  background-color: var(--post-padding-color);
}

#post-wrapper-inner {
  border-radius: 8px;
  background-color: white;
  max-width: var(--post-width);

  &:empty {
    padding-block: 2rem;
    text-align: center;
    &::after {
      font-style: italic;
      content: "(Post will appear here...)";
    }
  }
}

.post {
  overflow-x: auto;
}

.post-output {
  overflow-x: auto;
}

#post-image-container {
  display: grid;
  place-items: center;

  &:empty {
    padding-block: calc(2rem + 16px + 2px);
    text-align: center;
    &::after {
      font-style: italic;
      content: "(Output image will appear here...)";
    }
  }

  & .loader {
    padding-block: calc(2rem + 16px + 2px);
  }
}

.description {
  p {
    margin-bottom: 1rem;
  }
  ol {
    list-style: decimal;
  }
  ol li {
    font-feature-settings: unset;
    list-style-type: unset;
  }
  li {
    margin-bottom: 4px;
  }
  code {
    display: inline;
    font-size: 0.875rem;
    font-family: "Courier New", Courier, monospace;
    border: 1px solid #ddd;
    border-radius: 4px;
    background-color: #fff;
    padding: 0.1em 0.2em;
  }
}

#svg-definitions {
  display: none;
}

/* Helper styles */
.container {
  max-width: 1440px;
  width: 100%;
  margin-inline: auto;
  padding-inline: 15px;
}

.card {
  height: fit-content;
  padding: 1rem 1.5rem;
  background-color: #e6e7ee;
  border: 0.0625rem solid rgba(243, 247, 250, 0.05);
  box-shadow: var(--nu-shadow-soft);
  border-radius: 0.55rem;
}

.card-label {
  font-size: 1.5rem;
  margin-bottom: 1rem;
  font-weight: 700;
  padding-bottom: 0.25rem;
}

.post-scroller {
  width: fit-content;
  max-width: 100%;
  max-height: var(--scroller-height);
  margin-inline: auto;
  overflow: auto;
  scrollbar-gutter: stable;
}

.button-icon {
  vertical-align: text-top;
}

.inline-icon {
  vertical-align: middle;
}

fieldset.group {
  flex-direction: row;
}

/* Element styles */
label {
  gap: 0.5rem;
  font-size: 0.875rem;
  display: grid;
}

textarea {
  resize: vertical;
  width: 100%;
  min-height: 4rem;
  max-height: 500px;
  display: block;
  width: 100%;
  padding: 0.6rem 0.75rem;
  font-size: 1rem;
  font-weight: 300;
  line-height: 1.5;
  color: #44476a;
  background-color: #e6e7ee;
  background-clip: padding-box;
  border: 0.0625rem solid #d1d9e6;
  border-radius: 0.55rem;
  box-shadow: var(--nu-shadow-inset);
  overflow-y: auto;
  scrollbar-gutter: stable;
  scrollbar-width: thin;

  outline: unset;
  transition: border-color 200ms ease-in-out;

  &:focus-visible {
    border-color: #b8b9be;
  }
}

@media (width < 800px) {
  body {
    padding: 1rem;
  }
  main {
    grid-template-columns: 1fr;
  }
}

.loader {
  display: flex;
  gap: 1ch;
}

[aria-busy="true"]:not(input, select, textarea, html, form):before {
  display: inline-block;
  width: 1em;
  height: 1em;
  background-image: url("data:image/svg+xml,%3Csvg fill='none' height='24' width='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' %3E%3Cstyle%3E g %7B animation: rotate 2s linear infinite; transform-origin: center center; %7D circle %7B stroke-dasharray: 75,100; stroke-dashoffset: -5; animation: dash 1.5s ease-in-out infinite; stroke-linecap: round; %7D @keyframes rotate %7B 0%25 %7B transform: rotate(0deg); %7D 100%25 %7B transform: rotate(360deg); %7D %7D @keyframes dash %7B 0%25 %7B stroke-dasharray: 1,100; stroke-dashoffset: 0; %7D 50%25 %7B stroke-dasharray: 44.5,100; stroke-dashoffset: -17.5; %7D 100%25 %7B stroke-dasharray: 44.5,100; stroke-dashoffset: -62; %7D %7D %3C/style%3E%3Cg%3E%3Ccircle cx='12' cy='12' r='10' fill='none' stroke='rgb(136, 145, 164)' stroke-width='4' /%3E%3C/g%3E%3C/svg%3E");
  background-size: 1em auto;
  background-repeat: no-repeat;
  content: "";
  vertical-align: -0.125em;
}

/* Modifying other libraries */

.toastify {
  background: #e6e7ee;
  box-shadow: var(--nu-shadow);
  color: #44476a;
  border-radius: 0.55rem;
  border: 1px solid #d1d9e6;
}

.toast-close {
  color: #44476a;
}

/* Fixes */

/* Show all images */
.RoN4R,
.GmPch {
  visibility: visible !important;
}
/* Blaze */
.m5KTc:has([aria-label="Blaze"]) {
  display: none;
}

